<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GoTrabahoMobile</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="signupasa">Sign Up as a</string>
    <string name="customer">Customer</string>
    <string name="freelancer">Freelancer</string>
    <string name="required">Required</string>
    <string-array name="idType">
        <item>ID TYPE</item>
        <item>Driver\'s License</item>
        <item>SSS</item>
        <item>Passport</item>
        <item>National Id</item>
    </string-array>
    <string-array name="serviceTypes">
        <item>Service Type</item>
        <item>Plumbing</item>
        <item>Electrical</item>
        <item>Refrigerator Repair</item>
        <item>Air Conditioner Repair</item>
        <item>Carpentry</item>
    </string-array>
    <string-array name="bugTypes">
        <item>Visual/ User Interface Bug</item>
        <item>Functional Bug (buttons etc.)</item>
        <item>Content Bug (Information inaccuracy)</item>
        <item>Suggestions</item>
    </string-array>
    <string name="application">Application Form</string>
    <string name="activity">Activity</string>
    <string name="services">Services</string>
    <string name="identityverification">Identity Verification</string>
    <string name="jobverification">Job Verification</string>
    <string name="proofofwork">Proof of Work</string>
    <string name="listview">List View</string>
    <string name="mapview">Map View</string>
    <string name="freelancername"></string>
    <string name="description">Description: </string>
    <string name="price">Price: ₱</string>
    <string name="location">Location: </string>
    <string name="rating">Rating: </string>
    <string name="identityver_details">Please upload a picture of an official photo ID (passport, driver\'s license, etc) showing your name and age to allow us to verify your identity. We need this to confirm your eligibility and to confirm that you have not worked for us in the past.</string>
    <string name="uploadid">Upload ID</string>
    <string name="serviceselection">Service Selection</string>
    <string name="setSched">Set Schedule</string>
    <string name="negotiate">Negotiate</string>
    <string name="rewards">Rewards</string>
    <string name="paymentOptions">Payment Options</string>
    <string name="logout">Log Out</string>
    <string name="confirm">Confirm</string>
    <string name="proceed">Proceed</string>
    <string name="submit">Submit</string>
    <string name="rewardInfo">Availing eight (8) services will reward you with ₱100 off on your next avail!</string>
    <string name="serviceselec_details">Please select the type of service you wish to provide</string>
    <string name="proofofwork_details">Please upload a picture of previous work or experience related to the service you have selected. We need this to check your credibility and quality of work to ensure that quality service is provided.
        \n \n (ex. Certificate of employment, previous works or projects)</string>
    <string name="jobver_details">Please upload a picture or a file of your TESDA certificate that coincides with the service you selected. We need this to check your eligibility and ensure that quality service is provided.</string>
    <string name="application_confirmation" tools:ignore="ExtraTranslation">Your application is currently being reviewed. Please wait while we confirm your application.</string>
    <string name="title_activity_freelancer_main">FreelancerMainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="reportProblem">Report a Problem</string>
    <string name="reportProblemDesc">If you had a problem with the service provided by the freelancer, please write down the details below.</string>
    <string name="rateService">Rate the Service</string>
    <string name="setPrice">Set Price</string>
    <string name="setPriceDesc">Make sure that the set price is agreed by both parties.</string>
    <string name="setASched">Set A Schedule</string>
    <string name="setDate">Set Date</string>
    <string name="setASchedDesc">Set a schedule for the service</string>
    <string name="Resched">Reschedule Service</string>
    <string name="ReschedDesc">Set a new date to reschedule the service</string>
    <string name="cancelService">Cancel Service?</string>
    <string name="cancelServiceDesc">Note: Cancellation of a booked service 2 days before the scheduled date will charge you with a cancellation fee.</string>
    <string name="noteAddservice">Note: Adding a new service will require you to submit a new TESDA Certificate that will align with that service.</string>
    <string name="confirmCancelService">Are you sure you want to cancel the booking?</string>
    <string name="payment">Payment</string>
    <string name="bookingSummary">Booking Summary</string>
    <string name="freelancerName">Freelancer: </string>
    <string name="bookingSummaryService">Service: </string>
    <string name="bookingSummaryDate">Date: </string>
    <string name="bookingSummaryTime">Time: </string>
    <string name="bookingSummarySetPrice">Set Price: </string>
    <string name="choosePaymentOption">Choose a Payment Option</string>
    <string name="save">Save</string>
    <string name="hello_blank_fragment">aaa</string>
</resources>